--- a/components/base-layout.module.css
+++ b/components/base-layout.module.css
@@ -1,6 +1,6 @@
 .main-container {
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-evenly;
 	align-items: center;
 	flex-direction: column;
 	width: 100%;
@@ -8,10 +8,14 @@
 }
 
 .background {
-	background-image: url("/images/background.jpg");
-	background-size: cover;
+	height: 100vh;
+	width: 100vw;
+}
+
+.background-image {
 	position: fixed;
-	width: 100%;
+	overflow: hidden;
 	height: 100%;
-	padding: 5%;
+	width: 100%;
+	z-index: -1;
 }
