--- a/styles/form-page.module.css
+++ b/styles/form-page.module.css
@@ -12,6 +12,7 @@
 	background-color: rgba(255, 255, 255, 0.5);
 	max-width: 50%;
 	padding: 1%;
+	margin-bottom: 10%;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
