--- a/styles/global.css
+++ b/styles/global.css
@@ -2,14 +2,14 @@ html,
 body {
 	padding: 0;
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	line-height: 1.6;
 	user-select: none;
 }
 
 * {
 	box-sizing: border-box;
+	font-family: "Calibri", "Gill Sans", "Gill Sans MT", "Trebuchet MS",
+		sans-serif;
 }
 
 a {
