--- a/app/styles/form-page.module.css
+++ b/app/styles/form-page.module.css
@@ -1,32 +1,62 @@
-.header {
+.back-to-home {
+	margin: 3rem 0 0;
+}
+
+.wrapper {
+	width: 50%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 }
 
-.back-to-home {
-	margin: 3rem 0 0;
-}
-
 .form-box {
 	background-color: rgba(255, 255, 255, 0.5);
-	max-width: 50%;
-	padding: 1%;
+	max-width: 35%;
+	padding: 1.5%;
 	margin-bottom: 10%;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
 	background-blend-mode: multiply;
+	align-items: center;
+}
+
+.input-container {
+	width: 100%;
+}
+
+.input {
+	width: 100%;
+	display: grid;
+	grid-auto-flow: column;
+	grid-template-columns: 1fr;
+	grid-auto-columns: 60%;
+	margin: 2px;
+}
+
+.input-label {
+	justify-self: end;
+	padding-right: 10%;
+	margin-left: 5%;
+}
+
+.input-field {
+	width: 80%;
+	justify-self: start;
+}
+
+.bottomBox {
+	float: right;
+	margin-right: 12%;
+	margin-top: 1%;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
 }
 
 .center-text {
 	text-align: center;
 }
-
-.no-margin {
-	margin: 0;
-}
-
 .title {
 	margin: 2%;
 }
