--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -5,6 +5,10 @@ body {
 	line-height: 1.6;
 	user-select: none;
 }
+main {
+	width: 100%;
+	height: 100%;
+}
 
 * {
 	box-sizing: border-box;
@@ -24,4 +28,8 @@ a:hover {
 img {
 	max-width: 100%;
 	display: block;
+}
+
+.no-margin {
+	margin: 0;
 }
