--- a/app/styles/day-grid.module.css
+++ b/app/styles/day-grid.module.css
@@ -1,9 +1,7 @@
-.staff-grid-container {
-	user-select: text;
-	overflow-y: auto;
-	margin: 2%;
-	width: 96%;
+.day-grid-container {
+	width: 100%;
 	height: 100%;
+	margin-right: 1%;
 }
 
 .header {
@@ -24,7 +22,7 @@
 	width: 100%;
 }
 
-.staff-grid {
+.day-grid {
 	grid-template-columns: auto;
 	display: grid;
 	height: 94%;
@@ -32,18 +30,18 @@
 	font-size: large;
 	border-bottom: 3px solid black;
 	border-left: 2px solid black;
-	overflow-y: inherit;
+	overflow-y: auto;
 	overflow-x: hidden;
 	scrollbar-width: none;
 	-ms-overflow-style: none;
 }
 
-.staff-grid::-webkit-scrollbar {
+.day-grid::-webkit-scrollbar {
 	width: 0;
 	height: 0;
 }
 
-.single-staff-container {
+.single-day-container {
 	height: 100%;
 	width: 100%;
 	grid-auto-flow: column;
@@ -52,15 +50,15 @@
 	min-height: 60px;
 }
 
-.single-staff-container:nth-child(odd) {
+.single-day-container:nth-child(odd) {
 	background-color: grey;
 }
 
-.single-staff-container:nth-child(even) {
+.single-day-container:nth-child(even) {
 	background-color: white;
 }
 
-.staff-info {
+.day-info {
 	border-top: 3px solid black;
 	border-right: 2px solid black;
 	height: 100%;
@@ -70,18 +68,4 @@
 	align-content: center;
 	flex-direction: column;
 	text-align: center;
-}
-.staff-info:first-child {
-	cursor: pointer;
-	text-decoration: underline;
-}
-
-.nav-container {
-	margin: 1%;
-	width: 2%;
-}
-
-.nav-link {
-	margin-right: 60%;
-	white-space: nowrap;
 }
