Front end header comments

--- a/app/styles/add-staff.layout.module.css
+++ b/app/styles/add-staff.layout.module.css
@@ -1,3 +1,13 @@
+/*
+ * @Script: add-staff.layout.module.css
+ * @Author: Eamon Heffernan
+ * @Email: eamonrheffernan@gmail.com
+ * @Created At: 2021-08-01 01:46:36
+ * @Last Modified By: Eamon Heffernan
+ * @Last Modified At: 2021-08-01 14:31:59
+ * @Description: Styling for the add-staff page.
+ */
+
 .base-container {
 	background-color: white;
 	width: 40%;
