--- a/app/styles/change-requests-layout.module.css
+++ b/app/styles/change-requests-layout.module.css
@@ -1,3 +1,13 @@
+/*
+ * @Script: change-requests-layout.module.css
+ * @Author: Eamon Heffernan
+ * @Email: eamonrheffernan@gmail.com
+ * @Created At: 2021-08-01 06:55:55
+ * @Last Modified By: Eamon Heffernan
+ * @Last Modified At: 2021-08-01 14:35:48
+ * @Description: Page to view a single change request
+ */
+
 .base-container {
 	background-color: white;
 	width: 40%;
