--- a/app/styles/day-grid.module.css
+++ b/app/styles/day-grid.module.css
@@ -1,3 +1,13 @@
+/*
+ * @Script: day-grid.module.css
+ * @Author: Eamon Heffernan
+ * @Email: eamonrheffernan@gmail.com
+ * @Created At: 2021-08-01 08:27:06
+ * @Last Modified By: Eamon Heffernan
+ * @Last Modified At: 2021-08-01 14:37:04
+ * @Description: Styling for day-grid
+ */
+
 .day-grid-container {
 	width: 100%;
 	height: 100%;
