--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -1,3 +1,13 @@
+/*
+ * @Script: global.css
+ * @Author: Eamon Heffernan
+ * @Email: eamonrheffernan@gmail.com
+ * @Created At: 2021-07-19 17:52:54
+ * @Last Modified By: Eamon Heffernan
+ * @Last Modified At: 2021-08-01 14:24:02
+ * @Description: Global css, applies to everything.
+ */
+
 html,
 body {
 	padding: 0;
