--- a/app/styles/staff.module.css
+++ b/app/styles/staff.module.css
@@ -1,3 +1,13 @@
+/*
+ * @Script: staff.module.css
+ * @Author: Eamon Heffernan
+ * @Email: eamonrheffernan@gmail.com
+ * @Created At: 2021-08-01 08:27:06
+ * @Last Modified By: Eamon Heffernan
+ * @Last Modified At: 2021-08-01 14:37:16
+ * @Description: Styling for admin staff page.
+ */
+
 .container {
 	margin: 2%;
 	width: 96%;
