--- a/app/styles/staff-grid.module.css
+++ b/app/styles/staff-grid.module.css
@@ -1,3 +1,12 @@
+/*
+ * @Script: staff-grid.module.css
+ * @Author: Eamon Heffernan
+ * @Email: eamonrheffernan@gmail.com
+ * @Created At: 2021-07-31 08:06:02
+ * @Last Modified By: Eamon Heffernan
+ * @Last Modified At: 2021-08-01 14:30:10
+ * @Description: Styling for staff grid.
+ */
 .staff-grid-container {
 	user-select: text;
 	overflow-y: auto;
