--- a/app/styles/title.module.css
+++ b/app/styles/title.module.css
@@ -1,3 +1,13 @@
+/*
+ * @Script: title.module.css
+ * @Author: Eamon Heffernan
+ * @Email: eamonrheffernan@gmail.com
+ * @Created At: 2021-07-19 17:52:54
+ * @Last Modified By: Eamon Heffernan
+ * @Last Modified At: 2021-08-01 14:22:14
+ * @Description: Css for the base layout title.
+ */
+
 .title {
 	color: white;
 	text-align: center;
